--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
       <artifactId>log4j-api</artifactId>
       <version>2.14.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20201115</version>
+    </dependency>
   </dependencies>
 
   <build>
