--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,18 @@
       <artifactId>json</artifactId>
       <version>20201115</version>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.15</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
