--- a/src/main/resources/config/device-id.properties
+++ b/src/main/resources/config/device-id.properties
@@ -1,6 +1,6 @@
 win-command=systeminfo
 win-id=\uC81C\uD488 ID
-linux-command=cat /prco/cpuinfo
+linux-command=cat /proc/cpuinfo
 linux-id=Serial
-unix-command=cat /prco/cpuinfo
+unix-command=cat /proc/cpuinfo
 unix-id=Serial
